# stytch-rs

./: .env.sample  Cargo.toml  README.md
examples/magiclinks/: Cargo.toml
examples/magiclinks/src/: main.rs
examples/stytch/: Cargo.toml
examples/stytch/src/: main.rs
src/api/: base.rs  magic_links.rs  mod.rs
stytch-rs/: Cargo.toml
stytch-rs/src/: lib.rs
stytch-rs/src/api/: base.rs  magic_links.rs  mod.rs
stytch-rs/src/api/magiclink/: email.rs  magic_links.rs  mod.rs
stytch-rs/src/api/otp/: mod.rs  otp.rs
stytch-rs/src/api/otp/email/: email.rs
stytch-rs/src/api/otp/sms/: sms.rs
stytch-rs/src/api/otp/whatsapp/: mod.rs  whatsapp.rs
stytch-rs/src/errors/: errors.rs  mod.rs
stytch-rs/src/model/: client.rs  magic_link_model.rs  mod.rs  otp_model.rs
tests/: magic_links.rs
