[package]
name = "stytch"
version = "0.2.0"
edition = "2021"
description = "Unofficial Stytch Client for Rust"
license = "MIT"
documentation = "https://docs.rs/stytch-rs"
readme = "../README.md"
homepage = "https://github.com/itsyaasir/stytch-rs"
repository = "https://github.com/itsyaasir/stytch-rs"
keywords = ["rust", "stytch", "auth", "client","otp"]
categories = ["web-programming"]


[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
reqwest = "0.11.9"
dotenv = "0.15.0"
thiserror = "1.0.30"