[package]
name = "stytch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stytch-rs = { path = "../../stytch-rs" }